# ECmean4

./: .coverage  .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  benchmarking.py  cdopipe.py  clim_cmip6_evaluate.py  cmip6-clim-evaluate.py  config.tmpl  config.yml  config_CMIP6_PD.yml  config_ecmean4.sh  config_globo.yml  correlation_pattern.py  dev-environment.yml  dev_environment.yml  ecmean.py  environment.yml  functions.py  global_mean.old.py  global_mean.py  gm_reference.yml  interface_ece4.yml  investigation.ipynb  mamba_environment.yml  out.txt  performance_indices.py  pi_climatology.yml  py-climatology-create.py  pyproject.toml  python_global_mean.py  reference.yml  requirements.txt  setup.py  xr_ecmean.py  xr_global_mean.py  xr_performance_indices.py  (+1 more)
.github/workflows/: condatest.yml  mambatest.yml  pypitest.yml  pytest.yml
bash/: config_ecmean4.sh  global_mean.sh  post_grid.sh
cdo/: cdo_ecmean.py  cdo_global_mean.py  cdo_performance_indices.py  cdopipe.py  global_mean.py  performance_indices.py
checks/: GM_check_BETA_1990_1990.txt  PI_check_BETA_1990_1990.txt
climatology/: climate_CMAP_tp.nc  climate_COADS_msl.nc  climate_CRU_t2m.nc  climate_ERA40_Q_zonal.nc  climate_ERA40_T_zonal.nc  climate_ERA40_V_zonal.nc  climate_GISS_SST.nc  climate_levitus_SSS.nc  create-clim-wilma-EC23.yml  pi_climatology_EC22.yml  variance_CMAP_tp.nc  variance_DASILVA_nsss.nc  variance_ERA40_T_zonal.nc  variance_GISS_SST.nc  variance_GISS_U_zonal.nc  variance_GISS_V_zonal.nc
climatology/EC22/: climatology_create_all.sh  pi_climatology_EC22.yml
climatology/EC23/: pi_climatology_EC23.yml
climatology/RK08/: pi_climatology_RK08.yml  pi_climatology_RK08_update.yml
climatology/r180x91/: climate_DASILVA_ewss.nc  climate_DASILVA_nsss.nc  climate_ERA40_U_zonal.nc  climate_ERA40_V_zonal.nc  climate_GISS_SICE.nc  climate_GISS_SST.nc  climate_OAFLUX_qnet.nc  climate_levitus_SSS.nc  opa_grid_2x2.nc  reference_grid_2x2.nc  variance_CMAP_tp.nc  variance_COADS_msl.nc  variance_CRU_t2m.nc  variance_DASILVA_ewss.nc  variance_DASILVA_nsss.nc  variance_ERA40_Q_zonal.nc  variance_ERA40_T_zonal.nc  variance_ERA40_U_zonal.nc  variance_ERA40_V_zonal.nc  variance_GISS_Q_zonal.nc  variance_GISS_SICE.nc  variance_GISS_T_zonal.nc  variance_OAFLUX_qnet.nc  variance_levitus_SSS.nc
docs/: docs_environment.yml  environment2.yml  requirements.txt
ecmean/: __init__.py  climatology.py  files.py  formula.py  general.py  global_mean.py  interp.py  masks.py  ncfixers.py  performance_indices.py  plotting.py
ecmean/libs/: areas.py  (+16 more)
interfaces/: interface_CMIP5.yml  interface_CMIP6.yml  interface_CMIP6_PD.yml  interface_EC-Earth4.yml  interface_EC-Earth4_mon.yml  interface_GLOBO.yml
reference/: gm_reference.yml
test/: config.yml  config_CMIP6.yml  test_global_mean.py  test_performance_indices.py
tests/: config.yml  config_CMIP6.yml  config_EC24.yml  test_global_mean.py  test_performance_indices.py
utils/: benchmarking.py  clim-create.py  cmip6-clim-evaluate.py
(+466 files in other folders)
